cmake_minimum_required(VERSION 3.10.2)

file(GLOB SRC_FILES *.cpp)

add_library(dir522 SHARED ${SRC_FILES} )
add_subdirectory(dir523)
add_subdirectory(dir545)
add_subdirectory(dir572)
set_source_files_properties(file3689.cpp PROPERTIES COMPILE_FLAGS -Dfile3689)

set_source_files_properties(file3690.cpp PROPERTIES COMPILE_FLAGS -Dfile3690)

set_source_files_properties(file3691.cpp PROPERTIES COMPILE_FLAGS -Dfile3691)

set_source_files_properties(file3692.cpp PROPERTIES COMPILE_FLAGS -Dfile3692)

set_source_files_properties(file3693.cpp PROPERTIES COMPILE_FLAGS -Dfile3693)

set_source_files_properties(file3694.cpp PROPERTIES COMPILE_FLAGS -Dfile3694)

set_source_files_properties(file3695.cpp PROPERTIES COMPILE_FLAGS -Dfile3695)

set_source_files_properties(file3696.cpp PROPERTIES COMPILE_FLAGS -Dfile3696)

set_source_files_properties(file3697.cpp PROPERTIES COMPILE_FLAGS -Dfile3697)

set_source_files_properties(file3698.cpp PROPERTIES COMPILE_FLAGS -Dfile3698)

set_source_files_properties(file3699.cpp PROPERTIES COMPILE_FLAGS -Dfile3699)

set_source_files_properties(file3700.cpp PROPERTIES COMPILE_FLAGS -Dfile3700)

set_source_files_properties(file3701.cpp PROPERTIES COMPILE_FLAGS -Dfile3701)

set_source_files_properties(file3702.cpp PROPERTIES COMPILE_FLAGS -Dfile3702)

set_source_files_properties(file3703.cpp PROPERTIES COMPILE_FLAGS -Dfile3703)

set_source_files_properties(file3704.cpp PROPERTIES COMPILE_FLAGS -Dfile3704)

set_source_files_properties(file3705.cpp PROPERTIES COMPILE_FLAGS -Dfile3705)

set_source_files_properties(file3706.cpp PROPERTIES COMPILE_FLAGS -Dfile3706)

set_source_files_properties(file3707.cpp PROPERTIES COMPILE_FLAGS -Dfile3707)

set_source_files_properties(file3708.cpp PROPERTIES COMPILE_FLAGS -Dfile3708)

set_source_files_properties(file3709.cpp PROPERTIES COMPILE_FLAGS -Dfile3709)

set_source_files_properties(file3710.cpp PROPERTIES COMPILE_FLAGS -Dfile3710)

set_source_files_properties(file3711.cpp PROPERTIES COMPILE_FLAGS -Dfile3711)

set_source_files_properties(file3712.cpp PROPERTIES COMPILE_FLAGS -Dfile3712)

set_source_files_properties(file3713.cpp PROPERTIES COMPILE_FLAGS -Dfile3713)

set_source_files_properties(file3714.cpp PROPERTIES COMPILE_FLAGS -Dfile3714)

set_source_files_properties(file3715.cpp PROPERTIES COMPILE_FLAGS -Dfile3715)

set_source_files_properties(file3716.cpp PROPERTIES COMPILE_FLAGS -Dfile3716)

set_source_files_properties(file3717.cpp PROPERTIES COMPILE_FLAGS -Dfile3717)

set_source_files_properties(file3718.cpp PROPERTIES COMPILE_FLAGS -Dfile3718)

set_source_files_properties(file3719.cpp PROPERTIES COMPILE_FLAGS -Dfile3719)

set_source_files_properties(file3720.cpp PROPERTIES COMPILE_FLAGS -Dfile3720)

set_source_files_properties(file3721.cpp PROPERTIES COMPILE_FLAGS -Dfile3721)

set_source_files_properties(file3722.cpp PROPERTIES COMPILE_FLAGS -Dfile3722)

set_source_files_properties(file3723.cpp PROPERTIES COMPILE_FLAGS -Dfile3723)

set_source_files_properties(file3724.cpp PROPERTIES COMPILE_FLAGS -Dfile3724)

set_source_files_properties(file3725.cpp PROPERTIES COMPILE_FLAGS -Dfile3725)

set_source_files_properties(file3726.cpp PROPERTIES COMPILE_FLAGS -Dfile3726)

set_source_files_properties(file3727.cpp PROPERTIES COMPILE_FLAGS -Dfile3727)

set_source_files_properties(file3728.cpp PROPERTIES COMPILE_FLAGS -Dfile3728)

set_source_files_properties(file3729.cpp PROPERTIES COMPILE_FLAGS -Dfile3729)

set_source_files_properties(file3730.cpp PROPERTIES COMPILE_FLAGS -Dfile3730)

set_source_files_properties(file3731.cpp PROPERTIES COMPILE_FLAGS -Dfile3731)

set_source_files_properties(file3732.cpp PROPERTIES COMPILE_FLAGS -Dfile3732)

set_source_files_properties(file3733.cpp PROPERTIES COMPILE_FLAGS -Dfile3733)

set_source_files_properties(file3734.cpp PROPERTIES COMPILE_FLAGS -Dfile3734)

set_source_files_properties(file3735.cpp PROPERTIES COMPILE_FLAGS -Dfile3735)

set_source_files_properties(file3736.cpp PROPERTIES COMPILE_FLAGS -Dfile3736)

set_source_files_properties(file3737.cpp PROPERTIES COMPILE_FLAGS -Dfile3737)

set_source_files_properties(file3738.cpp PROPERTIES COMPILE_FLAGS -Dfile3738)

set_source_files_properties(file3739.cpp PROPERTIES COMPILE_FLAGS -Dfile3739)

set_source_files_properties(file3740.cpp PROPERTIES COMPILE_FLAGS -Dfile3740)

set_source_files_properties(file3741.cpp PROPERTIES COMPILE_FLAGS -Dfile3741)

set_source_files_properties(file3742.cpp PROPERTIES COMPILE_FLAGS -Dfile3742)

set_source_files_properties(file3743.cpp PROPERTIES COMPILE_FLAGS -Dfile3743)

set_source_files_properties(file3744.cpp PROPERTIES COMPILE_FLAGS -Dfile3744)

set_source_files_properties(file3745.cpp PROPERTIES COMPILE_FLAGS -Dfile3745)

set_source_files_properties(file3746.cpp PROPERTIES COMPILE_FLAGS -Dfile3746)

set_source_files_properties(file3747.cpp PROPERTIES COMPILE_FLAGS -Dfile3747)

set_source_files_properties(file3748.cpp PROPERTIES COMPILE_FLAGS -Dfile3748)

set_source_files_properties(file3749.cpp PROPERTIES COMPILE_FLAGS -Dfile3749)

set_source_files_properties(file3750.cpp PROPERTIES COMPILE_FLAGS -Dfile3750)

set_source_files_properties(file3751.cpp PROPERTIES COMPILE_FLAGS -Dfile3751)

set_source_files_properties(file3752.cpp PROPERTIES COMPILE_FLAGS -Dfile3752)

set_source_files_properties(file3753.cpp PROPERTIES COMPILE_FLAGS -Dfile3753)

set_source_files_properties(file3754.cpp PROPERTIES COMPILE_FLAGS -Dfile3754)

set_source_files_properties(file3755.cpp PROPERTIES COMPILE_FLAGS -Dfile3755)

set_source_files_properties(file3756.cpp PROPERTIES COMPILE_FLAGS -Dfile3756)

set_source_files_properties(file3757.cpp PROPERTIES COMPILE_FLAGS -Dfile3757)

set_source_files_properties(file3758.cpp PROPERTIES COMPILE_FLAGS -Dfile3758)

set_source_files_properties(file3759.cpp PROPERTIES COMPILE_FLAGS -Dfile3759)

set_source_files_properties(file3760.cpp PROPERTIES COMPILE_FLAGS -Dfile3760)

set_source_files_properties(file3761.cpp PROPERTIES COMPILE_FLAGS -Dfile3761)

set_source_files_properties(file3762.cpp PROPERTIES COMPILE_FLAGS -Dfile3762)

set_source_files_properties(file3763.cpp PROPERTIES COMPILE_FLAGS -Dfile3763)

set_source_files_properties(file3764.cpp PROPERTIES COMPILE_FLAGS -Dfile3764)

set_source_files_properties(file3765.cpp PROPERTIES COMPILE_FLAGS -Dfile3765)

set_source_files_properties(file3766.cpp PROPERTIES COMPILE_FLAGS -Dfile3766)

set_source_files_properties(file3767.cpp PROPERTIES COMPILE_FLAGS -Dfile3767)

set_source_files_properties(file3768.cpp PROPERTIES COMPILE_FLAGS -Dfile3768)

set_source_files_properties(file3769.cpp PROPERTIES COMPILE_FLAGS -Dfile3769)

set_source_files_properties(file3770.cpp PROPERTIES COMPILE_FLAGS -Dfile3770)

set_source_files_properties(file3771.cpp PROPERTIES COMPILE_FLAGS -Dfile3771)

set_source_files_properties(file3772.cpp PROPERTIES COMPILE_FLAGS -Dfile3772)

set_source_files_properties(file3773.cpp PROPERTIES COMPILE_FLAGS -Dfile3773)

set_source_files_properties(file3774.cpp PROPERTIES COMPILE_FLAGS -Dfile3774)

set_source_files_properties(file3775.cpp PROPERTIES COMPILE_FLAGS -Dfile3775)

set_source_files_properties(file3776.cpp PROPERTIES COMPILE_FLAGS -Dfile3776)

set_source_files_properties(file3777.cpp PROPERTIES COMPILE_FLAGS -Dfile3777)

set_source_files_properties(file3778.cpp PROPERTIES COMPILE_FLAGS -Dfile3778)

set_source_files_properties(file3779.cpp PROPERTIES COMPILE_FLAGS -Dfile3779)

set_source_files_properties(file3780.cpp PROPERTIES COMPILE_FLAGS -Dfile3780)

set_source_files_properties(file3781.cpp PROPERTIES COMPILE_FLAGS -Dfile3781)

set_source_files_properties(file3782.cpp PROPERTIES COMPILE_FLAGS -Dfile3782)

set_source_files_properties(file3783.cpp PROPERTIES COMPILE_FLAGS -Dfile3783)

set_source_files_properties(file3784.cpp PROPERTIES COMPILE_FLAGS -Dfile3784)

set_source_files_properties(file3785.cpp PROPERTIES COMPILE_FLAGS -Dfile3785)

set_source_files_properties(file3786.cpp PROPERTIES COMPILE_FLAGS -Dfile3786)

set_source_files_properties(file3787.cpp PROPERTIES COMPILE_FLAGS -Dfile3787)

set_source_files_properties(file3788.cpp PROPERTIES COMPILE_FLAGS -Dfile3788)

set_source_files_properties(file3789.cpp PROPERTIES COMPILE_FLAGS -Dfile3789)

set_source_files_properties(file3790.cpp PROPERTIES COMPILE_FLAGS -Dfile3790)

set_source_files_properties(file3791.cpp PROPERTIES COMPILE_FLAGS -Dfile3791)

set_source_files_properties(file3792.cpp PROPERTIES COMPILE_FLAGS -Dfile3792)

set_source_files_properties(file3793.cpp PROPERTIES COMPILE_FLAGS -Dfile3793)

set_source_files_properties(file3794.cpp PROPERTIES COMPILE_FLAGS -Dfile3794)

set_source_files_properties(file3795.cpp PROPERTIES COMPILE_FLAGS -Dfile3795)

set_source_files_properties(file3796.cpp PROPERTIES COMPILE_FLAGS -Dfile3796)

set_source_files_properties(file3797.cpp PROPERTIES COMPILE_FLAGS -Dfile3797)

set_source_files_properties(file3798.cpp PROPERTIES COMPILE_FLAGS -Dfile3798)

set_source_files_properties(file3799.cpp PROPERTIES COMPILE_FLAGS -Dfile3799)

set_source_files_properties(file3800.cpp PROPERTIES COMPILE_FLAGS -Dfile3800)

set_source_files_properties(file3801.cpp PROPERTIES COMPILE_FLAGS -Dfile3801)

set_source_files_properties(file3802.cpp PROPERTIES COMPILE_FLAGS -Dfile3802)

set_source_files_properties(file3803.cpp PROPERTIES COMPILE_FLAGS -Dfile3803)

set_source_files_properties(file3804.cpp PROPERTIES COMPILE_FLAGS -Dfile3804)

set_source_files_properties(file3805.cpp PROPERTIES COMPILE_FLAGS -Dfile3805)

set_source_files_properties(file3806.cpp PROPERTIES COMPILE_FLAGS -Dfile3806)

set_source_files_properties(file3807.cpp PROPERTIES COMPILE_FLAGS -Dfile3807)

set_source_files_properties(file3808.cpp PROPERTIES COMPILE_FLAGS -Dfile3808)

set_source_files_properties(file3809.cpp PROPERTIES COMPILE_FLAGS -Dfile3809)

set_source_files_properties(file3810.cpp PROPERTIES COMPILE_FLAGS -Dfile3810)

set_source_files_properties(file3811.cpp PROPERTIES COMPILE_FLAGS -Dfile3811)

set_source_files_properties(file3812.cpp PROPERTIES COMPILE_FLAGS -Dfile3812)

set_source_files_properties(file3813.cpp PROPERTIES COMPILE_FLAGS -Dfile3813)

set_source_files_properties(file3814.cpp PROPERTIES COMPILE_FLAGS -Dfile3814)

set_source_files_properties(file3815.cpp PROPERTIES COMPILE_FLAGS -Dfile3815)

set_source_files_properties(file3816.cpp PROPERTIES COMPILE_FLAGS -Dfile3816)

set_source_files_properties(file3817.cpp PROPERTIES COMPILE_FLAGS -Dfile3817)

set_source_files_properties(file3818.cpp PROPERTIES COMPILE_FLAGS -Dfile3818)

set_source_files_properties(file3819.cpp PROPERTIES COMPILE_FLAGS -Dfile3819)

set_source_files_properties(file3820.cpp PROPERTIES COMPILE_FLAGS -Dfile3820)

set_source_files_properties(file3821.cpp PROPERTIES COMPILE_FLAGS -Dfile3821)

set_source_files_properties(file3822.cpp PROPERTIES COMPILE_FLAGS -Dfile3822)

set_source_files_properties(file3823.cpp PROPERTIES COMPILE_FLAGS -Dfile3823)

set_source_files_properties(file3824.cpp PROPERTIES COMPILE_FLAGS -Dfile3824)

set_source_files_properties(file3825.cpp PROPERTIES COMPILE_FLAGS -Dfile3825)

set_source_files_properties(file3826.cpp PROPERTIES COMPILE_FLAGS -Dfile3826)

set_source_files_properties(file3827.cpp PROPERTIES COMPILE_FLAGS -Dfile3827)

set_source_files_properties(file3828.cpp PROPERTIES COMPILE_FLAGS -Dfile3828)

set_source_files_properties(file3829.cpp PROPERTIES COMPILE_FLAGS -Dfile3829)

set_source_files_properties(file3830.cpp PROPERTIES COMPILE_FLAGS -Dfile3830)

set_source_files_properties(file3831.cpp PROPERTIES COMPILE_FLAGS -Dfile3831)

set_source_files_properties(file3832.cpp PROPERTIES COMPILE_FLAGS -Dfile3832)

set_source_files_properties(file3833.cpp PROPERTIES COMPILE_FLAGS -Dfile3833)

set_source_files_properties(file3834.cpp PROPERTIES COMPILE_FLAGS -Dfile3834)

set_source_files_properties(file3835.cpp PROPERTIES COMPILE_FLAGS -Dfile3835)

set_source_files_properties(file3836.cpp PROPERTIES COMPILE_FLAGS -Dfile3836)

set_source_files_properties(file3837.cpp PROPERTIES COMPILE_FLAGS -Dfile3837)

set_source_files_properties(file3838.cpp PROPERTIES COMPILE_FLAGS -Dfile3838)

set_source_files_properties(file3839.cpp PROPERTIES COMPILE_FLAGS -Dfile3839)

set_source_files_properties(file3840.cpp PROPERTIES COMPILE_FLAGS -Dfile3840)

set_source_files_properties(file3841.cpp PROPERTIES COMPILE_FLAGS -Dfile3841)

set_source_files_properties(file3842.cpp PROPERTIES COMPILE_FLAGS -Dfile3842)

set_source_files_properties(file3843.cpp PROPERTIES COMPILE_FLAGS -Dfile3843)

set_source_files_properties(file3844.cpp PROPERTIES COMPILE_FLAGS -Dfile3844)

set_source_files_properties(file3845.cpp PROPERTIES COMPILE_FLAGS -Dfile3845)

set_source_files_properties(file3846.cpp PROPERTIES COMPILE_FLAGS -Dfile3846)

set_source_files_properties(file3847.cpp PROPERTIES COMPILE_FLAGS -Dfile3847)

set_source_files_properties(file3848.cpp PROPERTIES COMPILE_FLAGS -Dfile3848)

set_source_files_properties(file3849.cpp PROPERTIES COMPILE_FLAGS -Dfile3849)

set_source_files_properties(file3850.cpp PROPERTIES COMPILE_FLAGS -Dfile3850)

set_source_files_properties(file3851.cpp PROPERTIES COMPILE_FLAGS -Dfile3851)

set_source_files_properties(file3852.cpp PROPERTIES COMPILE_FLAGS -Dfile3852)

set_source_files_properties(file3853.cpp PROPERTIES COMPILE_FLAGS -Dfile3853)

set_source_files_properties(file3854.cpp PROPERTIES COMPILE_FLAGS -Dfile3854)

set_source_files_properties(file3855.cpp PROPERTIES COMPILE_FLAGS -Dfile3855)

set_source_files_properties(file3856.cpp PROPERTIES COMPILE_FLAGS -Dfile3856)

set_source_files_properties(file3857.cpp PROPERTIES COMPILE_FLAGS -Dfile3857)

set_source_files_properties(file3858.cpp PROPERTIES COMPILE_FLAGS -Dfile3858)

set_source_files_properties(file3859.cpp PROPERTIES COMPILE_FLAGS -Dfile3859)

set_source_files_properties(file3860.cpp PROPERTIES COMPILE_FLAGS -Dfile3860)

set_source_files_properties(file3861.cpp PROPERTIES COMPILE_FLAGS -Dfile3861)

set_source_files_properties(file3862.cpp PROPERTIES COMPILE_FLAGS -Dfile3862)

set_source_files_properties(file3863.cpp PROPERTIES COMPILE_FLAGS -Dfile3863)

set_source_files_properties(file3864.cpp PROPERTIES COMPILE_FLAGS -Dfile3864)

set_source_files_properties(file3865.cpp PROPERTIES COMPILE_FLAGS -Dfile3865)

set_source_files_properties(file3866.cpp PROPERTIES COMPILE_FLAGS -Dfile3866)

set_source_files_properties(file3867.cpp PROPERTIES COMPILE_FLAGS -Dfile3867)

set_source_files_properties(file3868.cpp PROPERTIES COMPILE_FLAGS -Dfile3868)

set_source_files_properties(file3869.cpp PROPERTIES COMPILE_FLAGS -Dfile3869)

set_source_files_properties(file3870.cpp PROPERTIES COMPILE_FLAGS -Dfile3870)
